# local_talent

./: .env.example  database.sql  run_migration.py  vercel.json
.github/: copilot-instructions.md
backend/: db.js  inspect_bookings.js  package-lock.json  package.json  server.js  test_api.js  test_bookings.js  test_worker_detail.js
database/migrations/: 001_create_bookings.sql
frontend/: admin.html  booking.html  booking.js  index.html  intro.html  intro.js  landing.css  landing.html  register.html  script.js  style.css  women.html
frontend-next/: README.md  package-lock.json  package.json
frontend-next/pages/: booking.js  index.js  intro.js  women.js
frontend-next/pages/api/: workers.js
frontend-next/public/: landing.css
frontend-next/styles/: globals.css
python-backend/: .env.example  README.md  demo_simulate_driver.py  main.py  pyproject.toml  requirements.txt  smoke_test.py
